--- a/rdfs Reasoner/nbproject/project.properties
+++ b/rdfs Reasoner/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=rdfs Reasoner
+application.vendor=miguel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,81 @@ dist.jar=${dist.dir}/rdfs_Reasoner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/rdfs_Reasoner
+endorsed.classpath=
 excludes=
+file.reference.collection-0.7.jar=../apache-jena-3.14.0/lib/collection-0.7.jar
+file.reference.commons-cli-1.4.jar=../apache-jena-3.14.0/lib/commons-cli-1.4.jar
+file.reference.commons-codec-1.13.jar=../apache-jena-3.14.0/lib/commons-codec-1.13.jar
+file.reference.commons-compress-1.19.jar=../apache-jena-3.14.0/lib/commons-compress-1.19.jar
+file.reference.commons-csv-1.7.jar=../apache-jena-3.14.0/lib/commons-csv-1.7.jar
+file.reference.commons-io-2.6.jar=../apache-jena-3.14.0/lib/commons-io-2.6.jar
+file.reference.commons-lang3-3.9.jar=../apache-jena-3.14.0/lib/commons-lang3-3.9.jar
+file.reference.httpclient-4.5.10.jar=../apache-jena-3.14.0/lib/httpclient-4.5.10.jar
+file.reference.httpclient-cache-4.5.10.jar=../apache-jena-3.14.0/lib/httpclient-cache-4.5.10.jar
+file.reference.httpcore-4.4.12.jar=../apache-jena-3.14.0/lib/httpcore-4.4.12.jar
+file.reference.jackson-annotations-2.10.1.jar=../apache-jena-3.14.0/lib/jackson-annotations-2.10.1.jar
+file.reference.jackson-core-2.10.1.jar=../apache-jena-3.14.0/lib/jackson-core-2.10.1.jar
+file.reference.jackson-databind-2.10.1.jar=../apache-jena-3.14.0/lib/jackson-databind-2.10.1.jar
+file.reference.javax.annotation-api-1.3.2.jar=../apache-jena-3.14.0/lib/javax.annotation-api-1.3.2.jar
+file.reference.jcl-over-slf4j-1.7.26.jar=../apache-jena-3.14.0/lib/jcl-over-slf4j-1.7.26.jar
+file.reference.jena-arq-3.14.0.jar=../apache-jena-3.14.0/lib/jena-arq-3.14.0.jar
+file.reference.jena-base-3.14.0.jar=../apache-jena-3.14.0/lib/jena-base-3.14.0.jar
+file.reference.jena-cmds-3.14.0.jar=../apache-jena-3.14.0/lib/jena-cmds-3.14.0.jar
+file.reference.jena-core-3.14.0.jar=../apache-jena-3.14.0/lib/jena-core-3.14.0.jar
+file.reference.jena-dboe-base-3.14.0.jar=../apache-jena-3.14.0/lib/jena-dboe-base-3.14.0.jar
+file.reference.jena-dboe-index-3.14.0.jar=../apache-jena-3.14.0/lib/jena-dboe-index-3.14.0.jar
+file.reference.jena-dboe-storage-3.14.0.jar=../apache-jena-3.14.0/lib/jena-dboe-storage-3.14.0.jar
+file.reference.jena-dboe-trans-data-3.14.0.jar=../apache-jena-3.14.0/lib/jena-dboe-trans-data-3.14.0.jar
+file.reference.jena-dboe-transaction-3.14.0.jar=../apache-jena-3.14.0/lib/jena-dboe-transaction-3.14.0.jar
+file.reference.jena-iri-3.14.0.jar=../apache-jena-3.14.0/lib/jena-iri-3.14.0.jar
+file.reference.jena-rdfconnection-3.14.0.jar=../apache-jena-3.14.0/lib/jena-rdfconnection-3.14.0.jar
+file.reference.jena-shacl-3.14.0.jar=../apache-jena-3.14.0/lib/jena-shacl-3.14.0.jar
+file.reference.jena-shaded-guava-3.14.0.jar=../apache-jena-3.14.0/lib/jena-shaded-guava-3.14.0.jar
+file.reference.jena-tdb-3.14.0.jar=../apache-jena-3.14.0/lib/jena-tdb-3.14.0.jar
+file.reference.jena-tdb2-3.14.0.jar=../apache-jena-3.14.0/lib/jena-tdb2-3.14.0.jar
+file.reference.jsonld-java-0.12.5.jar=../apache-jena-3.14.0/lib/jsonld-java-0.12.5.jar
+file.reference.libthrift-0.13.0.jar=../apache-jena-3.14.0/lib/libthrift-0.13.0.jar
+file.reference.log4j-1.2.17.jar=../apache-jena-3.14.0/lib/log4j-1.2.17.jar
+file.reference.slf4j-api-1.7.26.jar=../apache-jena-3.14.0/lib/slf4j-api-1.7.26.jar
+file.reference.slf4j-log4j12-1.7.26.jar=../apache-jena-3.14.0/lib/slf4j-log4j12-1.7.26.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.collection-0.7.jar}:\
+    ${file.reference.commons-cli-1.4.jar}:\
+    ${file.reference.commons-codec-1.13.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-csv-1.7.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-lang3-3.9.jar}:\
+    ${file.reference.httpclient-4.5.10.jar}:\
+    ${file.reference.httpclient-cache-4.5.10.jar}:\
+    ${file.reference.httpcore-4.4.12.jar}:\
+    ${file.reference.jackson-annotations-2.10.1.jar}:\
+    ${file.reference.jackson-core-2.10.1.jar}:\
+    ${file.reference.jackson-databind-2.10.1.jar}:\
+    ${file.reference.javax.annotation-api-1.3.2.jar}:\
+    ${file.reference.jcl-over-slf4j-1.7.26.jar}:\
+    ${file.reference.jena-arq-3.14.0.jar}:\
+    ${file.reference.jena-base-3.14.0.jar}:\
+    ${file.reference.jena-cmds-3.14.0.jar}:\
+    ${file.reference.jena-core-3.14.0.jar}:\
+    ${file.reference.jena-dboe-base-3.14.0.jar}:\
+    ${file.reference.jena-dboe-index-3.14.0.jar}:\
+    ${file.reference.jena-dboe-storage-3.14.0.jar}:\
+    ${file.reference.jena-dboe-trans-data-3.14.0.jar}:\
+    ${file.reference.jena-dboe-transaction-3.14.0.jar}:\
+    ${file.reference.jena-iri-3.14.0.jar}:\
+    ${file.reference.jena-rdfconnection-3.14.0.jar}:\
+    ${file.reference.jena-shacl-3.14.0.jar}:\
+    ${file.reference.jena-shaded-guava-3.14.0.jar}:\
+    ${file.reference.jena-tdb-3.14.0.jar}:\
+    ${file.reference.jena-tdb2-3.14.0.jar}:\
+    ${file.reference.jsonld-java-0.12.5.jar}:\
+    ${file.reference.libthrift-0.13.0.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.7.26.jar}:\
+    ${file.reference.slf4j-log4j12-1.7.26.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
